Some more UI stuff. Trying fix extra width on iphone

--- a/style/style.css
+++ b/style/style.css
@@ -6,6 +6,7 @@ body {
   background-color: lightgrey;
   padding-left: 9vw;
   padding-right: 9vw;
+  width: 100%;
 }
 
 .sbinputbox {
